third_party/move/move-compiler-v2/tests/more-v1/flavors/async/derive_errors.exp

Diagnostics:
warning: unknown attribute
  ┌─ tests/more-v1/flavors/async/derive_errors.move:1:3
  │
1 │ #[actor]
  │   ^^^^^ Attribute name 'actor' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
  ┌─ tests/more-v1/flavors/async/derive_errors.move:5:3
  │
5 │ #[actor]
  │   ^^^^^ Attribute name 'actor' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
  ┌─ tests/more-v1/flavors/async/derive_errors.move:7:7
  │
7 │     #[state] struct A {}
  │       ^^^^^ Attribute name 'state' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
  ┌─ tests/more-v1/flavors/async/derive_errors.move:8:7
  │
8 │     #[state] struct B {}
  │       ^^^^^ Attribute name 'state' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:11:3
   │
11 │ #[actor]
   │   ^^^^^ Attribute name 'actor' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:13:7
   │
13 │     #[state] struct A {}
   │       ^^^^^ Attribute name 'state' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:16:7
   │
16 │     #[message] fun f1() {}
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:17:7
   │
17 │     #[message] fun f2(_x: &B) {}
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:18:7
   │
18 │     #[message] fun f3(_x: A) {}
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:19:7
   │
19 │     #[message] fun f4(_x: &u64) {}
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:20:7
   │
20 │     #[message] fun f5(_x: &A) {}
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:21:7
   │
21 │     #[message] fun f6(_x: &mut A) {}
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:22:7
   │
22 │     #[message] fun f7(_x: &A, _a1: u64, _a2: u64, _a3: u64, _a4: u64, _a5: u64, _a6: u64,
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.

warning: unknown attribute
   ┌─ tests/more-v1/flavors/async/derive_errors.move:24:7
   │
24 │     #[message] fun f8(_x: &mut Self::A) {}
   │       ^^^^^^^ Attribute name 'message' is unknown (use --skip-attribute-checks CLI option to ignore); known attributes are '{"bytecode_instruction", "deprecated", "expected_failure", "native_interface", "test", "test_only", "verify_only"}'.


Diagnostics:
error: local `_x` of type `WrongHandlerParam::A` does not have the `drop` ability
   ┌─ tests/more-v1/flavors/async/derive_errors.move:18:30
   │
18 │     #[message] fun f3(_x: A) {}
   │                              ^^ implicitly dropped here since it is no longer used
